# cs3api4lab/utils/model_utils.py
@@ -6,11 +6,11 @@ from datetime import datetime
 from IPython.utils import tz
 from cs3api4lab.utils.share_utils import ShareUtils
 
-class ModelUtils: 
-    date_fmt = '%Y-%m-%dT%H: %M: %SZ'
+class ModelUtils:
+    date_fmt = '%Y-%m-%dT%H:%M:%SZ'
 
     @staticmethod
-    def create_respond_model(): 
+    def create_respond_model():
         model = {}
         model['name'] = "/"
         model['path'] = "/"
@@ -29,19 +29,19 @@ class ModelUtils:
         return model
 
     @staticmethod
-    def parse_date(timestamp): 
-        try: 
+    def parse_date(timestamp):
+        try:
             date = datetime.fromtimestamp(timestamp, tz=tz.UTC).strftime(ModelUtils.date_fmt)
-        except ValueError: 
+        except ValueError:
             date = datetime.fromtimestamp(0, tz=tz.UTC).strftime(ModelUtils.date_fmt)
 
         return date
 
     @staticmethod
-    def map_share_to_base_model(share, stat, optional={}): 
+    def map_share_to_base_model(share, stat, optional={}):
         writable = False
         if hasattr(share.permissions.permissions,
-                   'initiate_file_upload') and share.permissions.permissions.initiate_file_upload is True: 
+                   'initiate_file_upload') and share.permissions.permissions.initiate_file_upload is True:
             writable = True
         model = {}
         model['name'] = stat['filepath'].rsplit('/', 1)[-1]
@@ -53,13 +53,13 @@ class ModelUtils:
         model['writable'] = writable
         model['opaque_id'] = share.id.opaque_id
 
-        if 'owner' in optional: 
+        if 'owner' in optional:
             model['owner'] = optional['owner']
 
         return model
 
     @staticmethod
-    def map_share_to_file_model(share, stat, optional={}): 
+    def map_share_to_file_model(share, stat, optional={}):
 
         model = ModelUtils.map_share_to_base_model(share, stat, optional)
         model['size'] = stat['size']
@@ -69,7 +69,7 @@ class ModelUtils:
         return model
 
     @staticmethod
-    def map_share_to_dir_model(share, stat, optional={}): 
+    def map_share_to_dir_model(share, stat, optional={}):
         model = ModelUtils.map_share_to_base_model(share, stat, optional)
         model['size'] = None
         model['type'] = 'directory'
@@ -78,7 +78,7 @@ class ModelUtils:
         return model
 
     @staticmethod
-    def convert_container_to_base_model(path, cs3_container): 
+    def convert_container_to_base_model(path, cs3_container):
         created, last_modified, size, writable = ModelUtils.get_info_from_container(cs3_container, path)
 
         model = {}
@@ -96,7 +96,7 @@ class ModelUtils:
         return model
 
     @staticmethod
-    def convert_container_to_file_model(cs3_model, cs3_container): 
+    def convert_container_to_file_model(cs3_model, cs3_container):
 
         model = ModelUtils.convert_container_to_base_model(cs3_model.path, cs3_container)
         model['type'] = 'file'
@@ -105,7 +105,7 @@ class ModelUtils:
         return model
 
     @staticmethod
-    def convert_container_to_notebook_model(cs3_model, cs3_container): 
+    def convert_container_to_notebook_model(cs3_model, cs3_container):
 
         model = ModelUtils.convert_container_to_base_model(cs3_model.path, cs3_container)
         model['type'] = 'notebook'
@@ -114,63 +114,63 @@ class ModelUtils:
         return model
 
     @staticmethod
-    def convert_container_to_directory_model(path, cs3_container, content=True): 
+    def convert_container_to_directory_model(path, cs3_container, content=True):
 
         model = ModelUtils.convert_container_to_base_model(path, cs3_container)
         model['size'] = None
         model['type'] = 'directory'
 
-        if content: 
+        if content:
             model['content'] = contents = []
             model['format'] = 'json'
 
-            for cs3_model in cs3_container: 
-                if cs3_model.type == resource_types.RESOURCE_TYPE_CONTAINER: 
+            for cs3_model in cs3_container:
+                if cs3_model.type == resource_types.RESOURCE_TYPE_CONTAINER:
                     sub_model = ModelUtils.convert_container_to_base_model(cs3_model.path, cs3_container)
                     sub_model['size'] = None
                     sub_model['type'] = 'directory'
                     contents.append(sub_model)
-                elif cs3_model.type == resource_types.RESOURCE_TYPE_FILE: 
-                    if type == 'notebook' or (type is None and path.endswith('.ipynb')): 
+                elif cs3_model.type == resource_types.RESOURCE_TYPE_FILE:
+                    if type == 'notebook' or (type is None and path.endswith('.ipynb')):
                         contents.append(
                             ModelUtils.convert_container_to_notebook_model(cs3_model, cs3_container)
                         )
-                    else: 
+                    else:
                         contents.append(
                             ModelUtils.convert_container_to_file_model(cs3_model, cs3_container)
                         )
-                else: #(TODO check why this wasnt here)
-                    raise web.HTTPError(500, u'Unexpected type: %s %s' % (cs3_model.path, cs3_model.type))
+                else:#(TODO check why this wasnt here)
+                    raise web.HTTPError(500, u'Unexpected type:%s %s' % (cs3_model.path, cs3_model.type))
 
         return model
 
     @staticmethod
-    def create_base_model_from_cs3_container(path, cs3_container): 
+    def create_base_model_from_cs3_container(path, cs3_container):
         cs3_model = None
-        for cs3_tmp_model in cs3_container: 
-            if cs3_tmp_model.type == resource_types.RESOURCE_TYPE_FILE and cs3_tmp_model.path == path: 
+        for cs3_tmp_model in cs3_container:
+            if cs3_tmp_model.type == resource_types.RESOURCE_TYPE_FILE and cs3_tmp_model.path == path:
                 cs3_model = cs3_tmp_model
 
-        if cs3_model is None: 
+        if cs3_model is None:
             raise web.HTTPError(404, u'%s is not a file' % path, reason='bad type')
 
         model = ModelUtils.convert_container_to_base_model(cs3_model.path, cs3_container)
         return model, cs3_model
 
     @staticmethod
-    def get_info_from_container(cs3_container, path): 
+    def get_info_from_container(cs3_container, path):
         size = None
         writable = False
         created = ModelUtils.parse_date(0)
         last_modified = ModelUtils.parse_date(0)
 
-        for cs3_model in cs3_container: 
-            if cs3_model.path == path: 
+        for cs3_model in cs3_container:
+            if cs3_model.path == path:
                 size = cs3_model.size
                 created = ModelUtils.parse_date(cs3_model.mtime.seconds)
                 last_modified = ModelUtils.parse_date(cs3_model.mtime.seconds)
 
-                if ShareUtils.map_permissions_to_role(cs3_model.permission_set) == "editor": 
+                if ShareUtils.map_permissions_to_role(cs3_model.permission_set) == "editor":
                     writable = True
 
         return created, last_modified, size, writable
